# mcp-assistant

./: README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: __init__.py  mcp_client.py  mcp_server.py
src/mcp_assistant/: mcp_client.py  mcp_server.py
tests/: test_mcp_client.py  test_mcp_server.py
